--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
     <td>4</td>
   </tr>
   <tr>
-    <td>Lingua straniera</td>
+    <td>Lingua inglese</td>
     <td>3</td>
   </tr>
   <tr>
-    <td>Storia e Geografia</td>
-    <td>3</td>
+    <td>Storia</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Geografia</td>
+    <td>1</td>
   </tr>
   <tr>
     <td>Matematica</td>
-    <td>5</td>
+    <td>4</td>
   </tr>
   <tr>
-    <td>Informatica</td>
+    <td>Diritto ed economia</td>
     <td>2</td>
   </tr>
   <tr>
@@ -35,11 +39,19 @@
     <td>3</td>
   </tr>
   <tr>
-    <td>Scienze</td>
+    <td>Chimica</td>
     <td>3</td>
   </tr>
   <tr>
-    <td>Disegno e storia dell'arte</td>
+    <td>Tecnologie informatiche</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>Scienze</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Rappresentazione grafica</td>
     <td>2</td>
   </tr>
   <tr>
@@ -50,16 +62,8 @@
     <td>Religione</td>
     <td>1</td>
   </tr>
-  <tr>
-    <td>Laboratorio di fisica</td>
-    <td>1</td>
-  </tr>
-  <tr>
-    <td>Laboratorio di informatica</td>
-    <td>1</td>
-  </tr>
+ 
 </table></ol>
-  
   
 <ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-link">Informazioni generali</button></ol></a>
 </body>
