--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
+<h3>Di seguito sono elencate le materie che si intraprenderanno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</h3>
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
  <tr>
     <td><h3><font color="orangered"><ol>Discipline</ol></font></h3></td>
@@ -23,46 +24,91 @@
     <td>2</td>
   </tr>
   <tr>
-    <td>Geografia</td>
-    <td>1</td>
-  </tr>
-  <tr>
     <td>Matematica</td>
-    <td>4</td>
-  </tr>
-  <tr>
-    <td>Diritto ed economia</td>
-    <td>2</td>
-  </tr>
-  <tr>
-    <td>Fisica</td>
     <td>3</td>
   </tr>
   <tr>
-    <td>Chimica</td>
-    <td>3</td>
-  </tr>
-  <tr>
-    <td>Tecnologie informatiche</td>
-    <td>3</td>
-  </tr>
-  <tr>
-    <td>Scienze</td>
-    <td>2</td>
-  </tr>
-  <tr>
-    <td>Rappresentazione grafica</td>
-    <td>2</td>
-  </tr>
-  <tr>
-    <td>Scienze motorie</td>
+    <td>Scienze motorie e sportive</td>
     <td>2</td>
   </tr>
   <tr>
     <td>Religione</td>
     <td>1</td>
   </tr>
- 
+  <tr>
+    <td>Complementi di matematica(*)</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td><b>Articolazione chimica e materiali</b></td>
+  </tr>
+  <tr>
+    <td>Chimica analitica e strumentale</td>
+    <td>7</td>
+  </tr>
+  <tr>
+    <td>Chimica organica e biochimica</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Tecnologie chimiche industrali</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td><b>Ore complessive</b></td>
+    <td><b>32</b></td>
+  </tr>
+  <tr>
+    <td><b>Articolazione chimica e biotecnologie ambientali</b></td>
+  </tr>
+  <tr>
+    <td>Chimica analitica e strumentale</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>Chimica organica e biochimica</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>Biologia e tecnologia del controllo ambientale </td>
+    <td>6</td>
+  </tr>
+  <tr>
+    <td>Fisica ambientale</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td><b>Ore complessive</b></td>
+    <td><b>32</b></td>
+  </tr>
+  <tr>
+    <td><b>Articolazione chimica e biotcnologie sanitarie</b></td>
+  </tr>
+  <tr>
+    <td>Chimic analitica e strumentale</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>Chimica organica e biochimica</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>Biologia e tecnologia del controllo sanitario</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>Igiene, anatomia, fisiologia, patologia</td>
+    <td>6</td>
+  </tr>
+  <tr>
+    <td>Legislazione sanitaria</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td><b>Ore complessive</b></td>
+    <td><b>32</b></td>
+  </tr>
+  
 </table></ol>
   
 <ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-link">Informazioni generali</button></ol></a>
