--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
-<h3>Di seguito sono elencate le materie che si intraprenderanno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</h3>
+<h3><ol>Di seguito sono elencate le materie che si intraprenderanno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</ol></h3>
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
  <tr>
     <td><h3><font color="orangered"><ol>Discipline</ol></font></h3></td>
