--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <td><b>Articolazione chimica e materiali</b></td>
   </tr>
   <tr>
-    <td>Chimica analitica e strumentale</td>
+    <td>Chimica analitica e strumentale(+)</td>
     <td>7</td>
   </tr>
   <tr>
-    <td>Chimica organica e biochimica</td>
+    <td>Chimica organica e biochimica(#)</td>
     <td>5</td>
   </tr>
   <tr>
-    <td>Tecnologie chimiche industrali</td>
+    <td>Tecnologie chimiche industrali(°)</td>
     <td>4</td>
   </tr>
   <tr>
@@ -74,7 +74,7 @@
     <td>6</td>
   </tr>
   <tr>
-    <td>Fisica ambientale</td>
+    <td>Fisica ambientale(§)</td>
     <td>2</td>
   </tr>
   <tr>
@@ -85,11 +85,11 @@
     <td><b>Articolazione chimica e biotcnologie sanitarie</b></td>
   </tr>
   <tr>
-    <td>Chimic analitica e strumentale</td>
+    <td>Chimica analitica e strumentale(&)</td>
     <td>3</td>
   </tr>
   <tr>
-    <td>Chimica organica e biochimica</td>
+    <td>Chimica organica e biochimica(£)</td>
     <td>3</td>
   </tr>
   <tr>
@@ -101,7 +101,7 @@
     <td>6</td>
   </tr>
   <tr>
-    <td>Legislazione sanitaria</td>
+    <td>Legislazione sanitaria(^)</td>
     <td>3</td>
   </tr>
   <tr>
@@ -110,7 +110,16 @@
   </tr>
   
 </table></ol>
-  
-<ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-link">Informazioni generali</button></ol></a>
+
+<p>*=In quinta non sarà presente questa materia.</p>
+<p>+=6 ore in quarta e 8 in quinta.</p>
+<p>#=3 ore in quinta</p>
+<p>°=5 ore in quarta e 6 in quinta</p>
+<p>§=3 ore in quinta</p>
+<p>&=Non ci sarà in quinta</p>
+<p>£=4 ore in quinta</p>
+<p>^=Solo in quinta</p>
+
+<ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-link"><h3>Informazioni generali</h3></button></ol></a>
 </body>
 </html>
