--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
   
 </table></ol>
 
-<p>*=In quinta non sarà presente questa materia.</p>
-<p>+=6 ore in quarta e 8 in quinta.</p>
-<p>#=3 ore in quinta</p>
-<p>°=5 ore in quarta e 6 in quinta</p>
-<p>§=3 ore in quinta</p>
-<p>&=Non ci sarà in quinta</p>
-<p>£=4 ore in quinta</p>
-<p>^=Solo in quinta</p>
+<ol><p>*=In quinta non sarà presente questa materia.</p></ol>
+<ol><p>+=6 ore in quarta e 8 in quinta.</p></ol>
+<ol><p>#=3 ore in quinta.</p></ol>
+<ol><p>°=5 ore in quarta e 6 in quinta.</p></ol>
+<ol><p>§=3 ore in quinta.</p></ol>
+<ol>p>&=Non ci sarà in quinta.</p></ol>
+<ol><p>£=4 ore in quinta.</p></ol>
+<ol><p>^=Solo in quinta.</p></ol>
 
 <ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-link"><h3>Informazioni generali</h3></button></ol></a>
 </body>
