--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <ol><p>#=3 ore in quinta.</p></ol>
 <ol><p>°=5 ore in quarta e 6 in quinta.</p></ol>
 <ol><p>§=3 ore in quinta.</p></ol>
-<ol>p>&=Non ci sarà in quinta.</p></ol>
+<ol><p>&=Non ci sarà in quinta.</p></ol>
 <ol><p>£=4 ore in quinta.</p></ol>
 <ol><p>^=Solo in quinta.</p></ol>
 
