--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
 <ol><p>£=4 ore in quinta.</p></ol>
 <ol><p>^=Solo in quinta.</p></ol>
 
-<ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-primary"><u>Informazioni generali</u></button></ol></a>
+<ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-primary"><u><em>Informazioni generali</em></u></button></ol></a>
 </body>
 </html>
