--- a/index.html
+++ b/index.html
@@ -5,120 +5,158 @@
 </head>
 <body>
 <h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
-<h3><ol>Di seguito sono elencate le materie che si intraprenderanno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</ol></h3>
+<h3><ol>Di seguito sono elencate le materie che si studieranno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</ol></h3>
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
  <tr>
     <td><h3><font color="orangered"><ol>Discipline</ol></font></h3></td>
-    <td><h3><font color="gold"><ol>Ore</ol></font></h3></td>
+    <td><ol>3° anno</ol></td>
+    <td><ol>4° anno</ol></td>
+    <td><ol>5° anno</ol></td>
   </tr>
   <tr>
     <td>Lingua e letteratura</td>
-    <td>4</td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
   </tr>
   <tr>
     <td>Lingua inglese</td>
-    <td>3</td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
   </tr>
   <tr>
-    <td>Storia</td>
-    <td>2</td>
+    <td>Storia e cittadinanza</td>
+    <td><ol>2</ol></td>
+    <td><ol>2</ol></td>
+    <td><ol>2</ol></td>
   </tr>
   <tr>
     <td>Matematica</td>
-    <td>3</td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
   </tr>
   <tr>
     <td>Scienze motorie e sportive</td>
-    <td>2</td>
+    <td><ol>2</ol></td>
+    <td><ol>2</ol></td>
+    <td><ol>2</ol></td>
   </tr>
   <tr>
     <td>Religione</td>
-    <td>1</td>
+    <td><ol>1</ol></td>
+    <td><ol>1</ol></td>
+    <td><ol>1</ol></td>
   </tr>
   <tr>
-    <td>Complementi di matematica(*)</td>
-    <td>3</td>
+    <td>Complementi di matematica</td>
+    <td><ol>1</ol></td>
+    <td><ol>1</ol></td>
+    <td><ol>0</ol></td>
   </tr>
   <tr>
     <td><b>Articolazione chimica e materiali</b></td>
   </tr>
   <tr>
-    <td>Chimica analitica e strumentale(+)</td>
-    <td>7</td>
+    <td>Chimica analitica e strumentale</td>
+    <td><ol>7</ol></td>
+    <td><ol>6</ol></td>
+    <td><ol>8</ol></td>
   </tr>
   <tr>
-    <td>Chimica organica e biochimica(#)</td>
-    <td>5</td>
+    <td>Chimica organica e biochimica</td>
+    <td><ol>5</ol></td>
+    <td><ol>5</ol></td>
+    <td><ol>3</ol></td>
   </tr>
   <tr>
-    <td>Tecnologie chimiche industrali(°)</td>
-    <td>4</td>
+    <td>Tecnologie chimiche industrali</td>
+    <td><ol>4</ol></td>
+    <td><ol>5</ol></td>
+    <td><ol>6</ol></td>
   </tr>
   <tr>
     <td><b>Ore complessive</b></td>
-    <td><b>32</b></td>
+    <td><b><ol>32</ol></b></td
+    <td><b><ol>32</ol></b></td>
+    <td><b><ol>32</ol></b></td>
   </tr>
   <tr>
     <td><b>Articolazione chimica e biotecnologie ambientali</b></td>
   </tr>
   <tr>
     <td>Chimica analitica e strumentale</td>
-    <td>4</td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
   </tr>
   <tr>
     <td>Chimica organica e biochimica</td>
-    <td>4</td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
   </tr>
   <tr>
     <td>Biologia e tecnologia del controllo ambientale </td>
-    <td>6</td>
+    <td><ol>6</ol></td>
+    <td><ol>6</ol></td>
+    <td><ol>6</ol></td>
   </tr>
   <tr>
-    <td>Fisica ambientale(§)</td>
-    <td>2</td>
+    <td>Fisica ambientale</td>
+    <td><ol>2</ol></td>
+    <td><ol>2</ol></td>
+    <td><ol>3</ol></td>
   </tr>
   <tr>
     <td><b>Ore complessive</b></td>
-    <td><b>32</b></td>
+    <td><b><ol>32</ol></b></td>
+    <td><b><ol>32</ol></b></td>
+    <td><b><ol>32</ol></b></td>
   </tr>
   <tr>
     <td><b>Articolazione chimica e biotcnologie sanitarie</b></td>
   </tr>
   <tr>
-    <td>Chimica analitica e strumentale(&)</td>
-    <td>3</td>
+    <td>Chimica analitica e strumentale</td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
+    <td><ol>0</ol></td> 
   </tr>
   <tr>
     <td>Chimica organica e biochimica(£)</td>
-    <td>3</td>
+    <td><ol>3</ol></td>
+    <td><ol>3</ol></td>
+    <td><ol>4</ol></td>
   </tr>
   <tr>
     <td>Biologia e tecnologia del controllo sanitario</td>
-    <td>4</td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
+    <td><ol>4</ol></td>
   </tr>
   <tr>
     <td>Igiene, anatomia, fisiologia, patologia</td>
-    <td>6</td>
+    <td><ol>6</ol></td>
+    <td><ol>6</ol></td>
+    <td><ol>6</ol></td>
   </tr>
   <tr>
-    <td>Legislazione sanitaria(^)</td>
-    <td>3</td>
+    <td>Legislazione sanitaria</td>
+    <td><ol>0</ol></td>
+    <td><ol>0</ol></td>
+    <td><ol>3</ol></td>
   </tr>
   <tr>
     <td><b>Ore complessive</b></td>
-    <td><b>32</b></td>
+    <td><b><ol>32</ol></b></td>
+    <td><b><ol>32</ol></b></td>
+    <td><b><ol>32</ol></b></td>
   </tr>
   
 </table></ol>
 
-<ol><p>*=In quinta non sarà presente questa materia.</p></ol>
-<ol><p>+=6 ore in quarta e 8 in quinta.</p></ol>
-<ol><p>#=3 ore in quinta.</p></ol>
-<ol><p>°=5 ore in quarta e 6 in quinta.</p></ol>
-<ol><p>§=3 ore in quinta.</p></ol>
-<ol><p>&=Non ci sarà in quinta.</p></ol>
-<ol><p>£=4 ore in quinta.</p></ol>
-<ol><p>^=Solo in quinta.</p></ol>
 
 <ol><a href="http://bea7.github.io/Informazioni.github.io/"><button type="button" class="btn btn-primary"><u><em>Informazioni generali</em></u></button></ol></a>
 </body>
