--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <td><ol>0</ol></td> 
   </tr>
   <tr>
-    <td>Chimica organica e biochimica(£)</td>
+    <td>Chimica organica e biochimica</td>
     <td><ol>3</ol></td>
     <td><ol>3</ol></td>
     <td><ol>4</ol></td>
