--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>BEATRICE TURRINI 5</title>
 <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:WHITESMOKE">
 <h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
 <h3><ol>Di seguito sono elencate le materie che si studieranno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</ol></h3>
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
