--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color:WHITESMOKE">
 <h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
 <h3><ol>Di seguito sono elencate le materie che si studieranno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</ol></h3>
-<center><img src="http://www.polomagona.it/public/foto/10[2].jpg" widht="300" height="300"></center>
+<img src="http://www.polomagona.it/public/foto/10[2].jpg" widht="300" height="300" style="float:right">
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
  <tr>
     <td><h3><font color="orangered"><ol>Discipline</ol></font></h3></td>
