--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color:WHITESMOKE">
-<h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1>
+<h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1><img src="http://www.polomagona.it/public/foto/10[2].jpg" widht="300" height="300" style="float:right">
 <center><h4>Di seguito sono elencate le materie che si studieranno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</h4></center>
-<img src="http://www.polomagona.it/public/foto/10[2].jpg" widht="300" height="300" style="float:right">
+
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
  <tr>
     <td><h3><font color="orangered"><ol>Discipline</ol></font></h3></td>
