--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color:WHITESMOKE">
-<h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1><img src="http://www.polomagona.it/public/foto/10[2].jpg" widht="300" height="300" style="float:right">
+<h1><ol><font color="limegreen"><b>DISCIPLINE INDIRIZZO CHIMICA</b></font></ol></h1><img src="http://www.polomagona.it/public/foto/10[2].jpg" class="img-responsive" widht="300" height="300" style="float:right">
 <center><h4>Di seguito sono elencate le materie che si studieranno nel corso degli ultimi 3 anni, con possibili variazioni delle ore.</h4></center>
 
 <ol><table border="1" width="500" cellpadding="5" cellspacing="0">
